fix: change z-index of Header

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -24,7 +24,7 @@
   align-items: center;
   padding: 0 10%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  z-index: 1;
+  z-index: 6;
 }
 
 .header img {
