--- a/src/components/Meals/MealsItem/MealForm.module.css
+++ b/src/components/Meals/MealsItem/MealForm.module.css
@@ -1,6 +1,7 @@
 .form {
   text-align: right;
   display: flex;
+  align-items: baseline;
 }
 
 .form button {
